--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -5,23 +5,21 @@
     <nz-step nzTitle="Address"></nz-step>
     <nz-step nzTitle="Occupation"></nz-step>
     <nz-step nzTitle="Health"></nz-step>
-    <nz-step nzTitle="Review"></nz-step>
   </nz-steps>
 
   <nz-divider></nz-divider>
 
-  <app-signup-personal-detail-form *ngIf="stepIndex === 0 || stepIndex === 4" formGroupName="personalDetail"></app-signup-personal-detail-form>
-  <app-signup-address-form *ngIf="stepIndex === 1 || stepIndex === 4" formGroupName="address"></app-signup-address-form>
-  <app-signup-occupation-form *ngIf="stepIndex === 2 || stepIndex === 4" formGroupName="occupation"></app-signup-occupation-form>
-  <app-signup-health-form *ngIf="stepIndex === 3 || stepIndex === 4"></app-signup-health-form>
+  <app-signup-personal-detail-form *ngIf="stepIndex === 0" formControlName="personalDetail"></app-signup-personal-detail-form>
+  <app-signup-address-form *ngIf="stepIndex === 1" formControlName="address"></app-signup-address-form>
+  <app-signup-occupation-form *ngIf="stepIndex === 2" formControlName="occupation"></app-signup-occupation-form>
 
   <nz-row>
     <nz-col [nzSpan]="12">
       <button nz-button nzType="primary" class="me-2" *ngIf="stepIndex !== 0" (click)="movePage(this.stepIndex - 1)">Previous</button>
     </nz-col>
     <nz-col [nzSpan]="12">
-      <button nz-button nzType="primary" class="float-end me-2" *ngIf="stepIndex !== 4" (click)="movePage(this.stepIndex + 1)">Next</button>
-      <button nz-button nzType="primary" class="float-end" *ngIf="stepIndex === 4" (click)="submitForm()">Register</button>
+      <button nz-button nzType="primary" class="float-end me-2" *ngIf="stepIndex !== 3" (click)="movePage(this.stepIndex + 1)">Next</button>
+      <button nz-button nzType="primary" class="float-end" *ngIf="stepIndex === 3" (click)="submitForm()">Register</button>
     </nz-col>
   </nz-row>
 
