--- a/src/app/user/signup-occupation-form/signup-occupation-form.component.html
+++ b/src/app/user/signup-occupation-form/signup-occupation-form.component.html
@@ -3,10 +3,7 @@
     <nz-form-label class="fw-bold text-start" [nzXs]="24" [nzMd]="4">Occupation Type</nz-form-label>
     <nz-form-control [nzXs]="24" [nzMd]="20">
       <nz-radio-group formControlName="occupationType">
-        <label nz-radio nzValue="A">Not employed</label>
-        <label nz-radio nzValue="B">Self-employed</label>
-        <label nz-radio nzValue="C">Government</label>
-        <label nz-radio nzValue="D">Private</label>
+        <label nz-radio *ngFor="let choice of EMPLOYMENT_TYPE_CHOICE_LIST" [nzValue]="choice.value">{{choice?.text}}</label>
       </nz-radio-group>
     </nz-form-control>
   </nz-form-item>
