--- a/src/app/user/community-user/community-user.component.html
+++ b/src/app/user/community-user/community-user.component.html
@@ -1,4 +1,5 @@
 <nz-table #fixedTable
+          [nzLoading]="isLoading"
           [nzData]="listOfDisplayData"
           [nzPageIndex]="pageIndex"
           [nzPageSize]="pageSize"
@@ -6,9 +7,9 @@
   <thead>
   <tr>
     <th>No.</th>
-    <th [nzSortFn]="fullNameSortFn" nzCustomFilter>
+    <th [nzSortFn]="fullNameColumnItem.sortFn" nzCustomFilter>
       Full Name
-      <nz-filter-trigger [(nzVisible)]="visible" [nzActive]="searchValue.length > 0" [nzDropdownMenu]="menu">
+      <nz-filter-trigger [(nzVisible)]="fullNameFilterIsVisible" [nzActive]="fullNameSearchValue.length > 0" [nzDropdownMenu]="fullNameFilterMenu">
         <i nz-icon nzType="search"></i>
       </nz-filter-trigger>
     </th>
@@ -24,7 +25,7 @@
   <tbody>
   <tr *ngFor="let data of fixedTable.data, let i = index">
     <td>{{ (pageIndex - 1) * pageSize + i + 1 }}</td>
-    <td>{{ data?.fullName }}</td>
+    <td>{{ data?.fullName | uppercase }}</td>
     <td>{{ data?.email || '-' }}</td>
     <td>
       <nz-tag [nzColor]="'green'" *ngIf="data?.isActive === 'Y'">Activated</nz-tag>
@@ -36,14 +37,10 @@
   </tbody>
 </nz-table>
 
-<nz-dropdown-menu #menu="nzDropdownMenu">
-  <div class="ant-table-filter-dropdown">
-    <div class="search-box">
-      <input type="text" nz-input placeholder="Search name" [(ngModel)]="searchValue" />
-      <button nz-button nzSize="small" nzType="primary" (click)="search()" class="search-button">
-        Search
-      </button>
-      <button nz-button nzSize="small" (click)="reset()">Reset</button>
-    </div>
+<nz-dropdown-menu #fullNameFilterMenu="nzDropdownMenu">
+  <div class="ant-table-filter-dropdown p-2">
+    <input class="mb-2" type="text" nz-input placeholder="Search name" [(ngModel)]="fullNameSearchValue" />
+    <button nz-button nzSize="small" nzType="primary" (click)="searchFullName()" class="me-2">Search</button>
+    <button nz-button nzSize="small" (click)="resetFullName()">Reset</button>
   </div>
 </nz-dropdown-menu>
