Display error input field (signup and login)

--- a/src/app/user/signup-personal-detail-form/signup-personal-detail-form.component.html
+++ b/src/app/user/signup-personal-detail-form/signup-personal-detail-form.component.html
@@ -52,7 +52,7 @@
     <nz-form-item>
       <nz-form-label class="fw-bold text-start" [nzXs]="24" [nzMd]="4">Gender</nz-form-label>
       <nz-form-control [nzXs]="24" [nzMd]="20">
-        <nz-select nzAllowClear nzPlaceHolder="Choose a gender" formControlName="gender">
+        <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Choose a gender" formControlName="gender">
           <nz-option nzValue="M" nzLabel="Male"></nz-option>
           <nz-option nzValue="F" nzLabel="Female"></nz-option>
         </nz-select>
