--- a/src/app/shared/components/post-feed/post-feed.component.html
+++ b/src/app/shared/components/post-feed/post-feed.component.html
@@ -14,7 +14,7 @@
             <small>{{post.createdDate | date: 'medium'}}</small>
           </nz-col>
 
-          <nz-col [nzXs]="24" [nzSm]="12" *ngIf="hasUserLoggedIn">
+          <nz-col [nzXs]="24" [nzSm]="12" *ngIf="isAdminLoggedIn">
             <button class="float-end" nz-button nzDanger nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this post?" (nzOnConfirm)="deletePost(post?.postId)">Delete</button>
           </nz-col>
         </nz-row>
