Add unique username validator

--- a/src/app/user/signup-personal-detail-form/signup-personal-detail-form.component.html
+++ b/src/app/user/signup-personal-detail-form/signup-personal-detail-form.component.html
@@ -44,7 +44,7 @@
         <ng-template #usernameErrorTpl let-control>
           <p>
             <span *ngIf="control.hasError('required')">Please input username<br></span>
-<!--            <span *ngIf="control.hasError('usernameTaken')">This username has been taken.<br></span>-->
+            <span *ngIf="control.hasError('usernameTaken')">This username has been taken.<br></span>
           </p>
         </ng-template>
       </nz-form-control>
