--- a/src/app/shared/components/newsfeed/newsfeed.component.html
+++ b/src/app/shared/components/newsfeed/newsfeed.component.html
@@ -1,5 +1,5 @@
 <nz-spin [nzSpinning]="isLoading">
-  <h2 class="mb-4" nz-typography>Trending News</h2>
+  <h2 class="mb-4" nz-typography>Health News</h2>
   <div class="container">
     <div class="row">
       <div class="col-lg-4 mb-4" *ngFor="let news of healthNews">
