Added assistance module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,12 @@
           <a routerLink="/community-user">User</a>
         </li>
       </ul>
+<!--      <ul *ngIf="hasUserLoggedIn()">-->
+<!--        <li nz-menu-item nzMatchRouter>-->
+<!--          <a routerLink="/community-user-assistance" *ngIf="!isAdminUser()">Assistance</a>-->
+<!--          <a routerLink="/admin-assistance" *ngIf="isAdminUser()">Assistance</a>-->
+<!--        </li>-->
+<!--      </ul>-->
       <ul>
         <li nz-menu-item nzMatchRouter>
           <a routerLink="/about">About Us</a>
